PRL-4518:Fixed sonar issue